PR c++/7804 	* error.c (dump_expr) [REAL_CST]: Output in decimal format.
	* g++.dg/other/warning1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57843 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-05  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/7804
+	* error.c (dump_expr) [REAL_CST]: Output in decimal format.
+
 2002-10-03  Mark Mitchell  <mark@codesourcery.com>
 
  	PR c++/7931
