--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-06  Frank Ch. Eigler  <fche@redhat.com>
+
+	* cppinit.c (init_standard_includes, parse_option): Use strncmp.
+
 2002-10-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c (set_multilib_dir): Don't access *end.
