--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-06  Andreas Jaeger  <aj@suse.de>
+
+	* libiberty/cplus-dem.c (ada_demangle): Get rid of unneeded
+	variable and of strict-aliasing warning.
+	(grow_vect): Use char as first parameter.
+
 2002-09-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (all): Fix multilib parallel build.
@@ -52,7 +58,7 @@
 2002-07-29  Neil Booth  <neil@daikokuya.co.uk>
 
 	* cplus-dem.c (PREPEND_BLANK): Remove.
-	
+
 2002-07-10  Jason Merrill  <jason@redhat.com>
 
 	* cp-demangle.c (demangle_identifier): Support extended Unicode
@@ -61,7 +67,7 @@
 2002-07-08  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* cp-demangle.c (demangle_v3_with_details): Wrap in
-	!defined IN_GLIBCPP_V3. 
+	!defined IN_GLIBCPP_V3.
 
 2002-07-01  Mark Mitchell  <mark@codesourcery.com>
 
@@ -135,7 +141,7 @@
 
 2002-03-30  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
-	* cp-demangle.c (java_demangle_v3): Don't try to release "demangled" 
+	* cp-demangle.c (java_demangle_v3): Don't try to release "demangled"
 	if it is NULL.
 
 2002-03-27  DJ Delorie  <dj@redhat.com>
@@ -549,10 +555,10 @@ Thu Nov 15 11:06:25 2001  Jeffrey A Law  (law@cygnus.com)
 
 2001-08-22  Matt Kraai  <kraai@alumni.carnegiemellon.edu>
 
- 	* fibheap.c (fibheap_init, fibnode_init): Remove.
- 	(fibheap_new, fibnode_new): Use xcalloc to allocate and
- 	initialize memory.
- 	(fibheap_insert): Remove check for node allocation failure.
+	* fibheap.c (fibheap_init, fibnode_init): Remove.
+	(fibheap_new, fibnode_new): Use xcalloc to allocate and
+	initialize memory.
+	(fibheap_insert): Remove check for node allocation failure.
 
 2001-08-21  Richard Henderson  <rth@redhat.com>
 
