* gcc.dg/cpp/c++98-pedantic.C: Moved to g++.dg/cpp. 	* gcc.dg/cpp/c++98.C: Likewise.
	* g++.dg/cpp/c++98-pedantic.C: Moved from gcc.dg/cpp to here.
	* g++.dg/cpp/c++98.C: Likewise.

	* g++.dg/README (Subdirectories): Mention cpp directory.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57868 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,13 @@
 2002-10-06  Andreas Jaeger  <aj@suse.de>
 
+	* gcc.dg/cpp/c++98-pedantic.C: Moved to g++.dg/cpp.
+	* gcc.dg/cpp/c++98.C: Likewise.
+
+	* g++.dg/cpp/c++98-pedantic.C: Moved from gcc.dg/cpp to here.
+	* g++.dg/cpp/c++98.C: Likewise.
+
+	* g++.dg/README (Subdirectories): Mention cpp directory.
+
 	PR target/7559
 	* gcc.dg/20021006-1.c: New test.
 
