--- a/gcc/testsuite/g++.dg/README
+++ b/gcc/testsuite/g++.dg/README
@@ -1,6 +1,7 @@
 Subdirectories:
 
 abi	 Tests for ABI compatibility -- mangling, object layout, etc.
+cpp	 Tests for the preprocessor.
 eh	 Tests for exception handling.
 expr     Tests for expressions.
 ext	 Tests for GNU language extensions.
