--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-06  Richard Henderson  <rth@redhat.com>
+
+	PR optimization/2960
+	* toplev.c (rest_of_compilation): Don't copy_loop_headers if
+	optimize_size.
+
 2002-10-06  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/mips/mips.h (SIZE_TYPE, PTRDIFF_TYPE): Override
