--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-10-06  Richard Henderson  <rth@redhat.com>
 
+	* config/rs6000/rs6000.md (load_toc_v4_PIC_2): Fix base constraint.
+
+2002-10-06  Richard Henderson  <rth@redhat.com>
+
 	PR optimization/2960
 	* toplev.c (rest_of_compilation): Don't copy_loop_headers if
 	optimize_size.
