--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-06  Richard Henderson  <rth@redhat.com>
+
+	* config/rs6000/rs6000.md (load_toc_v4_PIC_2): Fix base constraint.
+
 2002-10-06  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/6627
