--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.am (all-multi): Fix multilib parallel build.
+
 2002-10-01  Phil Edwards  <pme@gcc.gnu.org>
 
 	* Makefile.am (check-abi):  Add @ to rule.
