--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-07  Richard Henderson  <rth@redhat.com>
+
+	* config/fp-bit.c (EXTENDED_FLOAT_STUBS): Flush out all XF/TFmode
+	entry points; use void return value and argument list.
+
 2002-10-05  Naohiko Shimizu <nshimizu@keyaki.cc.u-tokai.ac.jp>
 
 	* t-pdp11: Add MULTILIB support for msoft-float.
