--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-07  Richard Henderson  <rth@redhat.com>
+
+	* decl2.c, pt.c: Revert c++/7754 fix.
+
 2002-10-05  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/7804
