--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-07  Richard Henderson  <rth@redhat.com>
+
+	* decl2.c: Complete reversion of c++/7754.
+
 2002-10-06  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/6627
