--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,13 @@
 2002-10-07  Michael Koch  <konqueror@gmx.de>
 
+	* java/nio/ByteBuffer.java,
+	java/nio/MappedByteBuffer.java:
+	New files, forgot to add these dummies.
+	* Makefile.am (java_native_source_files): Added new files.
+	* Makefile.in: Regenerated.
+
+2002-10-07  Michael Koch  <konqueror@gmx.de>
+
 	* java/nio/channels/AlreadyConnectedException.java,
 	java/nio/channels/ClosedChannelException.java,
 	java/nio/channels/ReadableByteChannel.java,
