--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -3615,7 +3615,7 @@
    #"
   [(set_attr "type" "compare")
    (set_attr "length" "4,8")])
-
+
 (define_split
   [(set (match_operand:CC 4 "cc_reg_not_cr0_operand" "")
 	(compare:CC
@@ -3635,7 +3635,7 @@
 	(compare:CC (match_dup 0)
 		    (const_int 0)))]
   "")
-
+
 ;; Rotate and shift insns, in all their variants.  These support shifts,
 ;; field inserts and extracts, and various combinations thereof.
 (define_expand "insv"
@@ -8744,15 +8744,59 @@
 (define_split
   [(set (match_operand:TF 0 "gpc_reg_operand" "")
 	(match_operand:TF 1 "const_double_operand" ""))]
-  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_FPRS
-   && TARGET_LONG_DOUBLE_128"
-  [(set (match_dup 3) (match_dup 1))
-   (set (match_dup 0)
-	(float_extend:TF (match_dup 3)))]
+  "(DEFAULT_ABI == ABI_AIX || DEFAULT_ABI == ABI_DARWIN)
+   && TARGET_HARD_FLOAT && TARGET_FPRS && ! TARGET_POWERPC64
+   && TARGET_LONG_DOUBLE_128 && reload_completed
+   && ((GET_CODE (operands[0]) == REG && REGNO (operands[0]) <= 31)
+       || (GET_CODE (operands[0]) == SUBREG
+	   && GET_CODE (SUBREG_REG (operands[0])) == REG
+	   && REGNO (SUBREG_REG (operands[0])) <= 31))"
+  [(set (match_dup 2) (match_dup 6))
+   (set (match_dup 3) (match_dup 7))
+   (set (match_dup 4) (match_dup 8))
+   (set (match_dup 5) (match_dup 9))]
   "
 {
-  operands[2] = operand_subword (operands[1], 0, 0, DFmode);
-  operands[3] = gen_reg_rtx (DFmode);
+  long l[4];
+  REAL_VALUE_TYPE rv;
+
+  REAL_VALUE_FROM_CONST_DOUBLE (rv, operands[1]);
+  REAL_VALUE_TO_TARGET_LONG_DOUBLE (rv, l);
+
+  operands[2] = operand_subword (operands[0], 0, 0, TFmode);
+  operands[3] = operand_subword (operands[0], 1, 0, TFmode);
+  operands[4] = operand_subword (operands[0], 2, 0, TFmode);
+  operands[5] = operand_subword (operands[0], 3, 0, TFmode);
+  operands[6] = gen_int_mode (l[0], SImode);
+  operands[7] = gen_int_mode (l[1], SImode);
+  operands[8] = gen_int_mode (l[2], SImode);
+  operands[9] = gen_int_mode (l[3], SImode);
+}")
+
+(define_split
+  [(set (match_operand:TF 0 "gpc_reg_operand" "")
+	(match_operand:TF 1 "easy_fp_constant" ""))]
+  "(DEFAULT_ABI == ABI_AIX || DEFAULT_ABI == ABI_DARWIN)
+   && TARGET_HARD_FLOAT && TARGET_FPRS && TARGET_POWERPC64
+   && TARGET_LONG_DOUBLE_128 && reload_completed
+   && ((GET_CODE (operands[0]) == REG && REGNO (operands[0]) <= 31)
+       || (GET_CODE (operands[0]) == SUBREG
+	   && GET_CODE (SUBREG_REG (operands[0])) == REG
+	   && REGNO (SUBREG_REG (operands[0])) <= 31))"
+  [(set (match_dup 2) (match_dup 4))
+   (set (match_dup 3) (match_dup 5))]
+  "
+{
+  long l[4];
+  REAL_VALUE_TYPE rv;
+
+  REAL_VALUE_FROM_CONST_DOUBLE (rv, operands[1]);
+  REAL_VALUE_TO_TARGET_LONG_DOUBLE (rv, l);
+
+  operands[2] = operand_subword (operands[0], 0, 0, TFmode);
+  operands[3] = operand_subword (operands[0], 1, 0, TFmode);
+  operands[4] = gen_int_mode (l[0], DImode);
+  operands[5] = gen_int_mode (l[1], DImode);
 }")
 
 (define_insn_and_split "extenddftf2"
