* java/lang/Thread.java (setDaemon): Check startable_flag, 	not isAlive().
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57906 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-06  Mark Wielaard  <mark@klomp.org>
+
+	* java/lang/Thread.java (setDaemon): Check startable_flag,
+	not isAlive().
+
 2002-10-07  Michael Koch  <konqueror@gmx.de>
 
 	* java/nio/Buffer.java: New stub file.
