Fix string concatenation bug.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@57912 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-07  Anthony Green  <green@redhat.com> 
+
+        * parse.y (merge_string_cste): Fix bug in string concatenation. 
+
 2002-10-03  Michael Koch  <konqueror@gmx.de>
 
 	* gcj.texi (Standard properties):
