--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-08  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* configure.host [s390*-*]: Enable Java interpreter.
+	Enable hash synchronization.  Add sysdeps dir.
+	* sysdep/s390/locks.h: New file.
+
 2002-10-06  Mark Wielaard  <mark@klomp.org>
 
 	* java/lang/Thread.java (setDaemon): Check startable_flag,
